# agentic_csv_analytics_rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: expenditures_2012_2021.csv
data/csv/: AVERAGE EXPENDITURES FOR AUTO INSURANCE, UNITED STATES, 1998-2007.csv  AVERAGE EXPENDITURES FOR AUTO INSURANCE, UNITED STATES, 1999-2008.csv  AVERAGE EXPENDITURES FOR AUTO INSURANCE, UNITED STATES, 2000-2009.csv  AVERAGE EXPENDITURES FOR AUTO INSURANCE, UNITED STATES, 2001-2010  AVERAGE EXPENDITURES FOR AUTO INSURANCE, UNITED STATES, 2002-2011.csv  AVERAGE EXPENDITURES FOR AUTO INSURANCE, UNITED STATES, 2003-2012.csv  Average Expenditures For Auto Insurance, 2004-2013.csv  Average Expenditures For Auto Insurance, 2005-2014.csv  Average Expenditures For Auto Insurance, 2006-2015.csv  Average Expenditures For Auto Insurance, 2007-2016.csv  Average Expenditures For Auto Insurance, 2008-2017.csv  Average Expenditures For Auto Insurance, 2009-2018.csv  Average Expenditures For Auto Insurance, 2010-2019.csv  Average Expenditures For Auto Insurance, 2011-2020.csv  expenditures_2012_2021.csv
data/output/: analysis_node_output.json
frontend/: main.py  ui.json  utils.py
src/: agent.py  agent_.py  graph.py  launcher.py
src/agents/: document_processor.py  embeddings.py  graph.py  graph_old.py  graph_trends.py  insurance_analysis.py  supervisor.py  vector_store.py
src/config/: config.json
src/tests/: test_utils.py
src/utils/: agent.py  agent_state.py  create_nodes.py  embedder.py  outputparser.py  prompt.py  response.py  utils.py
tests/: test_utils.py
